--- a/maya.css
+++ b/maya.css
@@ -2,10 +2,30 @@ body{
 	background: url(https://c1.staticflickr.com/5/4414/36889092256_664dcff0a7_b.jpg);
 	background-size: cover;
 	background-position: center;
+	font-family: lato;
+	color: white;
+
 }
 
 #content{
 	text-align: center;
 	padding-top: 25%;
+	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+				 0px 8px 13px rgba(0,0,0,0.1),
+				 0px 18px 23px rgba(0,0,0,0.1);
 }
 
+h1{
+	font-weight: 700;
+	font-size: 4em;
+}
+
+html{
+	height: 100%;
+}
+
+hr{
+	width: 400px;
+	border-top: 1px solid #f8f8f8;
+	border-bottom: 1ppx solid rgb(0,0,0,0.2);
+}
